--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>RizzGPT - Desi Flirting Assistant</title>
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700;900&display=swap" rel="stylesheet" />
+  <link rel="icon" type="image/svg+xml" href="/logo.svg">
   <style>
     * {
       box-sizing: border-box;
@@ -221,9 +222,28 @@
         opacity: 1;
       }
     }
+
+    #dev {
+    position: fixed;
+    bottom: 100px;
+    right: 100px;
+    background-color: #f4f4f4;
+    color: #222;
+    padding: 6px 12px;
+    border-radius: 8px;
+    font-size: 13px;
+    font-family: system-ui, sans-serif;
+    opacity: 0.75;
+    transition: opacity 0.2s ease-in-out;
+    z-index: 9999;
+  }
+
   </style>
 </head>
 <body>
+  <div id="dev">
+    Dev: BAGAD BILLA
+  </div>
   <div class="animated-bg"></div>
   <div class="float-bubble"></div>
   <div class="float-bubble"></div>
